[gd_scene format=3 uid="uid://d00ornus8xfx2"]

[ext_resource type="Script" uid="uid://cjj75v26nj3vw" path="res://scripts/spring/spring.gd" id="1"]
[ext_resource type="Script" uid="uid://brxqs26pocuvo" path="res://scripts/nodes/solid_object.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://by1ppyrrwlm8v" path="res://sprites/springs/yellow_spring_up.png" id="3"]
[ext_resource type="PackedScene" path="res://objects/audios/SpringAudio.tscn" id="4"]

[sub_resource type="Animation" id="1"]
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="Animation" id="2"]
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pksd7"]
_data = {
&"activate": SubResource("1"),
&"idle": SubResource("2")
}

[sub_resource type="RectangleShape2D" id="7"]
size = Vector2(32, 16)

[node name="YellowSpringUp" type="Node2D" unique_id=1805770762]
script = ExtResource("1")
spring_audio_path = NodePath("SpringAudio")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1639729663]
texture = ExtResource("3")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D" unique_id=1569802934]
libraries/ = SubResource("AnimationLibrary_pksd7")

[node name="SolidObject" type="StaticBody2D" parent="." unique_id=826048031]
script = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SolidObject" unique_id=1783726183]
position = Vector2(0, 8)
shape = SubResource("7")

[node name="SpringAudio" parent="." unique_id=2091832707 instance=ExtResource("4")]

[connection signal="player_ground_collision" from="SolidObject" to="." method="_on_SolidObject_player_ground_collision"]
[connection signal="player_left_wall_collision" from="SolidObject" to="." method="_on_SolidObject_player_left_wall_collision"]
[connection signal="player_right_wall_collision" from="SolidObject" to="." method="_on_SolidObject_player_right_wall_collision"]
